--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.byoskill.machinelearning</groupId>
     <artifactId>Java-Naive-Bayes-Classifier</artifactId>
-    <version>1.0.7</version>
+    <version>1.0.8-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
